2007-05-28  Michael Yount <minkel07@verizon.net>

	* lib/Majordomo.pm:  Update the version number.

	* lib/Mj/Archive.pm:  (_sync_msgs)  Adjust archive numbers if
	duplicates are found.  Suggested by Roger Klorese.

2006-12-29  Michael Yount <csf@moscow.com>

	* postinstall:  Remove reference to mj_resend.
	Thanks to Michael Weiser.

2006-09-20  Michael Yount <csf@moscow.com>

	* lib/Mj/Util.pm:  (re_match)  Treat the text or pattern as
	a single line when untainting to avoid truncation.
	Thanks to Alvaro Herrera.

2006-07-01  Michael Yount <csf@moscow.com>

	* bin/mj_wwwadm:  Avoid duplicated tokens for the 
	"showtokens ALL" command.
	Thanks to Steven Orr.

2006-03-01  Michael Yount <csf@moscow.com>

	* lib/Mj/Format.pm:  (set, show)  Show the date at which
	a subscriber's timed "nomail" setting will end in a menu of 
	delivery classes.

2006-02-27  Michael Yount <csf@moscow.com>

        * lib/Mj/Format.pm:  (who)  Display a list of subscribe commands
	when the who-export command is used without an admin password.
	Thanks to Roger Klorese.

2006-01-19  Michael Yount <csf@moscow.com>

	* lib/Mj/List.pm:  (set)  Add "exists" test to quell warning.
	Thanks to Brock Rozen.

2005-12-08  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (valid_list)  Escape dollar signs
	in substitution variables to avoid looping.
	Thanks to Marc Fournier.

2005-11-11  Michael Yount <csf@moscow.com>

	* lib/Mj/List.pm:  (flag_set)  Treat an invalid address as
	a nonmember instead of always returning zero.
	Thanks to Rado S.

2005-11-08  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (who_chunk)  Change control characters
	into hyphens in the delivery class.
	Thanks to Rado S.

2005-10-27  Michael Yount <csf@moscow.com>

	* lib/Mj/Config.pm:  (compile_pattern)  Remove redundant
	escaping of metacharacters.
	Thanks to Roger Klorese.

2005-10-09  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_list_file_execute)  Pass the interface